Always show scrollbar to prevent shift

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -85,6 +85,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	overflow-y: scroll;
 }
 
 main {
